--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ jobs:
   include:
     - stage: build docker image
       script:
-      - echo "$AZURE_CONTAINER_REPOSITORY_PASSWORD" | docker login -u "$AZURE_CONTAINER_REPOSITORY_LOGIN" --password-stdin
+      - echo AZURE_CONTAINER_REPOSITORY_PASSWORD | docker login -u AZURE_CONTAINER_REPOSITORY_LOGIN --password-stdin
       - docker build -t chatng .
       - docker tag chatng chatng.azurecr.io/chatng
       - docker push chatng.azurecr.io/chatng
