--- a/WebApplication/appsettings.Development.json
+++ b/WebApplication/appsettings.Development.json
@@ -7,6 +7,6 @@
     }
   },
   "ConnectionStrings": {
-    "ChatDatabase" : "#ConnectionStringForDev"
+    "ChatDatabase" : "mongodb://localhost"
   }
 }
