--- a/BLL/BLL.csproj
+++ b/BLL/BLL.csproj
@@ -5,4 +5,7 @@
   <ItemGroup>
     <ProjectReference Include="..\DomainObjects\DomainObjects.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="2.0.2" />
+  </ItemGroup>
 </Project>
