--- a/DAL/DAL.csproj
+++ b/DAL/DAL.csproj
@@ -6,12 +6,13 @@
     <ProjectReference Include="..\DomainObjects\DomainObjects.csproj" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="2.0.2" />
     <PackageReference Include="MongoDB.Driver" Version="2.6.0" />
     <PackageReference Include="MongoDB.Driver.Core" Version="2.6.0" />
   </ItemGroup>
   <ItemGroup>
-    <Reference Include="Microsoft.Extensions.Options, Version=2.0.0.0, Culture=neutral, PublicKeyToken=adb9793829ddae60">
-      <HintPath>..\..\..\.nuget\packages\microsoft.extensions.options\2.0.0\lib\netstandard2.0\Microsoft.Extensions.Options.dll</HintPath>
+    <Reference Include="MongoDB.Driver, Version=2.6.0.0, Culture=neutral, PublicKeyToken=null">
+      <HintPath>..\..\..\.nuget\packages\mongodb.driver\2.6.0\lib\netstandard1.5\MongoDB.Driver.dll</HintPath>
     </Reference>
   </ItemGroup>
 </Project>
